--- a/public/views/commentDetail.html
+++ b/public/views/commentDetail.html
@@ -37,7 +37,7 @@
                 <li id="activityPage"><a href="activity.html">活动展示</a> </li>
                 <li id="resource"><a href="resource.html">资源下载</a></li>
                 <li id="commentPage"><a href="comments.html">讨论区</a></li>
-                <li><a href="markdownEditor.html">发布</a></li>
+                <li id="publish"><a href="markdownEditor.html">发布</a></li>
                 <li><a href="renwu.html">老师查看</a></li>
             </ul>
 
@@ -50,7 +50,7 @@
                         <li><a href="modifyPassword.html">修改密码</a></li>
                     </ul>
                 </li>
-                <li id="logout"><a href="login.html">退出</a></li>
+                <li id="logout"><a>退出</a></li>
                 <li id="login"><a href="login.html">登录</a> </li>
             </ul>
 
