--- a/public/views/taskList.html
+++ b/public/views/taskList.html
@@ -70,7 +70,7 @@ Purchase: http://wrapbootstrap.com
                         <li><a href="modifyPassword.html">修改密码</a></li>
                     </ul>
                 </li>
-                <li id="logout"><a href="login.html">退出</a></li>
+                <li id="logout"><a>退出</a></li>
                 <li id="login"><a href="login.html">登录</a> </li>
             </ul>
 
@@ -141,7 +141,7 @@ Purchase: http://wrapbootstrap.com
 <script src="../lib/bootstrap/bootstrap.min.js"></script>
 <script src="../js/jquery.params.js"></script>
 <!--Beyond Scripts-->
-<script src="../lib/beyond/beyond.min.js"></script>
+<!--<script src="../lib/beyond/beyond.min.js"></script>-->
 
 
 <!--Page Related Scripts-->
@@ -204,7 +204,7 @@ Purchase: http://wrapbootstrap.com
 </script>
 <script src="../lib/sparkline/jquery.sparkline.js"></script>
 <script src="../lib/sparkline/sparkline-init.js"></script>
-<script src="../js/pageNav.js"></script>
+<!--<script src="../js/pageNav.js"></script>-->
 <script src="../scripts/nav.js"></script>
 <script src="../scripts/taskList.js"></script>
 </body>
