--- a/public/views/userInfo.html
+++ b/public/views/userInfo.html
@@ -54,7 +54,7 @@
                         <li><a href="modifyPassword.html">修改密码</a></li>
                     </ul>
                 </li>
-                <li id="logout"><a href="login.html">退出</a></li>
+                <li id="logout"><a>退出</a></li>
                 <li id="login"><a href="login.html">登录</a> </li>
             </ul>
 
@@ -75,7 +75,7 @@
                 <div class="panel-body" id="userInfo">
                 </div>
             </div>
-            <div class="panel panel-default">
+            <div class="panel panel-default" id="plans">
                 <div class="panel-heading">
                     <h3 class="panel-title base_head">
                         计划
@@ -134,6 +134,7 @@
                             <div class="form-group">
                                 <div class="col-sm-offset-2 col-sm-7">
                                     <button id="submit_plan" class="btn  btn-success">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp提交&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</button>
+                                    <a id="cancel_plan" href="#plans" class="btn  btn-default">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp取消&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</a>
                                 </div>
                             </div>
                         </form>
