--- a/public/views/planList.html
+++ b/public/views/planList.html
@@ -63,10 +63,11 @@ Purchase: http://wrapbootstrap.com
             <ul class="nav navbar-nav">
                 <li id="index"><a href="../index.html">首页</a></li>
                 <li id="post"><a href="postList.html">文章分享</a></li>
-
+                <li id="activityPage"><a href="activity.html">活动展示</a> </li>
                 <li id="resource"><a href="resource.html">资源下载</a></li>
-                <li><a href="markdownEditor.html">发布</a></li>
-                <li><a href="comments.html">讨论区</a></li>
+                <li id="commentPage"><a href="comments.html">讨论区</a></li>
+                <li id="publish"><a href="markdownEditor.html">发布</a></li>
+                <li><a href="renwu.html">老师查看</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
@@ -78,7 +79,7 @@ Purchase: http://wrapbootstrap.com
                         <li><a href="modifyPassword.html">修改密码</a></li>
                     </ul>
                 </li>
-                <li id="logout"><a href="login.html">退出</a></li>
+                <li id="logout"><a>退出</a></li>
                 <li id="login"><a href="login.html">登录</a> </li>
             </ul>
 
@@ -237,7 +238,7 @@ Purchase: http://wrapbootstrap.com
 
 
 <!--Beyond Scripts-->
-<script src="../lib/beyond/beyond.min.js"></script>
+<!--<script src="../lib/beyond/beyond.min.js"></script>-->
 
 
 <!--Page Related Scripts-->
@@ -245,7 +246,7 @@ Purchase: http://wrapbootstrap.com
 <script src="../lib/sparkline/jquery.sparkline.js"></script>
 <script src="../lib/sparkline/sparkline-init.js"></script>
 <script src="../scripts/nav.js"></script>
-<script src="../js/pageNav.js"></script>
+<!--<script src="../js/pageNav.js"></script>-->
 
 
 </body>
