--- a/public/views/postDetail.html
+++ b/public/views/postDetail.html
@@ -55,7 +55,7 @@
                         <li><a href="modifyPassword.html">修改密码</a></li>
                     </ul>
                 </li>
-                <li id="logout"><a href="login.html">退出</a></li>
+                <li id="logout"><a>退出</a></li>
                 <li id="login"><a href="login.html">登录</a> </li>
             </ul>
 
