small improvement & mistake correction 2

--- a/public/views/postDetail.html
+++ b/public/views/postDetail.html
@@ -144,7 +144,7 @@
                 <div class="comment-info u-clearfix">
                     <div class="comment-meta">
                         <div class="comment-author" itemprop="author"><a href='http://synyan.net' rel='external nofollow' class='url'>{{comment.profile.name}}</a><span class="comment-reply-link u-cursorPointer" onclick="return addComment.moveForm('comment-1744', '1744', 'respond', '78012')">回复</span></div>
-                        <div class="comment-time" itemprop="datePublished" datetime="2016-03-29T12:26:40+08:00">{{comment.created_at}}</div>
+                        <div class="comment-time" itemprop="datePublished" datetime="2016-03-29T12:26:40+08:00">{{comment.submitTime}}</div>
                     </div>
                 </div>
                 <div class="comment-content" itemprop="description">
