--- a/public/views/myArticles.html
+++ b/public/views/myArticles.html
@@ -79,7 +79,7 @@
                     <div class="post-meta">
                         <span>by <a href="#">{{post.profile.name}}</a></span>
                         /
-                        <span><i class="fa fa-clock-o"></i>{{post.created_at}}</span>
+                        <span><i class="fa fa-clock-o"></i>{{post.publishTime}}</span>
                         /
                         <span><i class="fa fa-comment-o"></i> 1</span>
 
