--- a/public/views/resource.html
+++ b/public/views/resource.html
@@ -124,7 +124,7 @@
     {{each taskLists as task i}}
     <div class="post-meta">
         <a class="downbtn"href="{{task.url}}">{{task.filename}}</a>
-        <span>发布者<a href="#">{{task.uploader_id}}</a></span>/<span><i class="fa fa-clock-o"></i>{{task.created_at}}</span>
+        <span>发布者<a href="#">{{task.uploader_id}}</a></span>/<span><i class="fa fa-clock-o"></i>{{task.uploadTime}}</span>
         <span>
             <a download="{{task.file}}" class="btn downloadBtn" href="{{task.url}}">下载</a>
                                         <a href="delete/${file.fileId}" style="display: none"></a></span>
